# Emulador-De-Arquitetura-De-Computador

./: .gitignore  CMakeLists.txt  README.md  compile.sh  teste.sh
.cache/clangd/index/: BinaryUtils.cpp.6C2A6B7F936B5192.idx  BinaryUtils.hpp.26A63CD14BB5798D.idx  Hash128Bits.cpp.41F5857C9478F130.idx  Hash128Bits.hpp.E09BB0FC177621DF.idx  InstructionSetParser.cpp.8195F90DC005C6FD.idx  InstructionSetParser.hpp.329C53F7DCCD88D2.idx  JsonHandler.cpp.B1C49BC33B335E3F.idx  JsonHandler.hpp.C162F8B4B6F593A3.idx  Machine.cpp.CF00652B59D4FB26.idx  Machine.hpp.F8F48C69FB9D5F6A.idx  MachineDescription.cpp.201E6E387C23D432.idx  MachineDescription.h.049DD542D21BE194.idx  MachineDescriptionParser.cpp.58E05FE5597D8338.idx  MachineDescriptionParser.hpp.0A42D912768D6C9D.idx  MachineDescriptionValidator.cpp.2B9BD35B21D80FB5.idx  MachineDescriptionValidator.hpp.6054034D67DBE5FC.idx  ParsingUtils.hpp.C5433873455232F4.idx  abi_macros.hpp.6540EEAB0243EEF0.idx  adl_serializer.hpp.B0DD4C8CCA2672EE.idx  begin.hpp.778957FC5DF1E919.idx  binary_reader.hpp.F7A1ED4CAD771EDD.idx  binary_writer.hpp.B6D595EEFBE656F3.idx  byte_container_with_subtype.hpp.BD7F0D8148FD5405.idx  cpp_future.hpp.BE8F954A25C18448.idx  detected.hpp.D617EAB9BCB4F178.idx  end.hpp.02FEC14FEEFA3449.idx  exceptions.hpp.241DC2FCCFCD4D33.idx  from_json.hpp.F8A969BAA0F0D3C3.idx  hash.hpp.EAF2A8419D736AB4.idx  hedley.hpp.F750B9ECA7AEE318.idx  hedley_undef.hpp.A63587B1D5657850.idx  identity_tag.hpp.7E2070F854F948E1.idx  imconfig.h.D2D3496A3BEFF1E7.idx  imgui.cpp.9C18A44EEAE0BA14.idx  imgui.h.E8BF1AF9B09BB383.idx  imgui_demo.cpp.B04561BE444BEF13.idx  imgui_draw.cpp.51F864EECDC1EF8B.idx  imgui_impl_glfw.cpp.52E271D131B7CA5B.idx  imgui_impl_glfw.h.534E41CF11D214B3.idx  imgui_impl_opengl3.cpp.8B076AFEA98963B8.idx  (+40 more)
headers/: BinaryUtils.hpp  Hash128Bits.hpp  InstructionSetDescription.h  InstructionSetDescriptionParser.hpp  InstructionSetParser.hpp  JsonFieldDescription.h  JsonHandler.hpp  JsonSchema.h  Machine.hpp  MachineDescription.h  MachineDescriptionParser.hpp  MachineDescriptionValidator.hpp  ParserUtils.hpp  ParsingUtils.hpp
src/: BinaryUtils.cpp  Hash128Bits.cpp  InstructionSetDescription.cpp  InstructionSetDescriptionParser.cpp  InstructionSetParser.cpp  JsonHandler.cpp  Machine.cpp  MachineDescription.cpp  MachineDescriptionParser.cpp  MachineDescriptionValidator.cpp  ParserUtils.cpp  ParsingUtils.cpp  main.cpp
testes/: example.json  example_machine.json  test_instruction_set.json  test_machine.json
